Adding new POST endpoint: /associated_token_accounts/burn_and_close/instructions. SOlving bugs in app.libs.utils. Adding "Remove previous images" in step.md file
